# forge-next

./: .gitignore  Cargo.toml  README.md  build.rs  gen_protocol.ps1  pubspec.yaml  run.ps1  watch_docs.ps1
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
docs/: high-level-architecture.md  project-structure.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  preferences.dart  responsive.dart
lib/protocol/: client.pb.dart  client.pbenum.dart  client.pbjson.dart  client.pbserver.dart  server.pb.dart  server.pbjson.dart  server.pbserver.dart
lib/screens/: auth_screen.dart
linux/: CMakeLists.txt  my_application.cc
protocol/: client.proto  server.proto
src/: main.rs  server.rs
src/data/: database.rs
src/protocol/: mod.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
