[package]
name = "forge-server"
version = "0.1.0"
authors = ["skyne98 <ahalahan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3.0", features = ["full"] }
anyhow = "1.0.38"
directories = "3.0.1"
tokio-tungstenite = "0.14.0"
log = "0.4.14"
env_logger = "0.8.3"
futures-util = "0.3.13"
prost = "0.7"
prost-types = "0.7"
rusqlite = { version = "0.24.2", features = ["bundled"] }
tungstenite = "0.13.0"

[build-dependencies]
anyhow = "1.0.38"
prost-build = { version = "0.7" }
